# models/login.go
@@ -1,0 +1,7 @@
+package models
+
+
+type Login struct{
+	Login string 
+	Password string 
+}
